--- a/reloj.html
+++ b/reloj.html
@@ -13,12 +13,11 @@
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 
 
-    <!-- Jquery ui -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="js/jquery-ui/jquery-ui.min.css" />
-    <link rel="stylesheet" href="js/jquery-ui/jquery-ui.structure.min.css" />
-    <link rel="stylesheet" href="js/jquery-ui/jquery-ui.theme.min.css" />
-    <script type="text/javascript" src="js/jquery-ui/jquery-ui.min.js"></script>
+    <!-- MOMENT JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/es.min.js"></script>
+
+ 
     <!-- MIS SCRIPTS -->
     <script type="text/javascript" src="js/main.js"></script>
 
@@ -56,26 +55,14 @@
         <!-- CONTENIDO -->
         <section id="content">
             <div id="box">
+                <!-- cargar un reloj  -->
 
-                <!-- se carga el acordeon -->
+                <div id="reloj">
 
-                <div id="acordeon">
-                    <h3>Quienes somos</h3>
-                    <p>the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently
-                        with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                        Why do we use it?</p>
-
-                    <h3>Politica de Envios</h3>
-                    <p>the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently
-                        with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                        Why do we use it?</p>
-
-                    <h3>Nuestro Lema</h3>
-                    <p>the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently
-                        with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                        Why do we use it?</p>
                 </div>
+
             </div>
+
             <aside id="sidebar">
                 <div id="about">
                     <h4>Quien soy?</h4>
